--- a/templates/login.html
+++ b/templates/login.html
@@ -39,7 +39,7 @@
                               <div class="form-group">
                                 <div class="input-group">
                
-                                    <input type="text" class="form-control" id="password" name="password" placeholder="Password" required="">
+                                    <input type="password" class="form-control" id="password" name="password" placeholder="Password" required="">
                                      <div class="input-group-append">
                                       <span class="input-group-text"><i class="glyphicon glyphicon-lock"></i></span>
                                     </div>
